added example for check anagram string